[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonHost" type="Button" parent="."]
margin_left = 76.0
margin_top = 48.0
margin_right = 495.0
margin_bottom = 173.0
rect_pivot_offset = Vector2( -537, -94 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="."]
margin_left = 555.0
margin_top = 52.0
margin_right = 974.0
margin_bottom = 177.0
rect_pivot_offset = Vector2( -537, -94 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP Address" type="LineEdit" parent="."]
margin_left = 656.0
margin_top = 311.0
margin_right = 900.0
margin_bottom = 350.0
text = "25.3.101.236"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="LineEdit" parent="."]
margin_left = 656.0
margin_top = 381.0
margin_right = 900.0
margin_bottom = 420.0
text = "3232"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP Label" type="Label" parent="."]
margin_left = 513.061
margin_top = 322.749
margin_right = 648.061
margin_bottom = 336.749
text = "IP Address (Join only)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port Label" type="Label" parent="."]
margin_left = 570.0
margin_top = 392.0
margin_right = 639.0
margin_bottom = 406.0
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitText" type="Label" parent="."]
margin_left = 232.0
margin_top = 361.0
margin_right = 477.0
margin_bottom = 375.0
text = "Session started... Waiting for players..."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="text_changed" from="IP Address" to="." method="_on_IP_Address_text_changed"]
[connection signal="text_changed" from="Port" to="." method="_on_Port_text_changed"]
